
[package]
name = "webrtc-video-chat"
version = "0.2.0"
authors = ["WebRTC Chat Team"]
edition = "2021"
description = "Professional WebRTC video chat application with Rust backend"
license = "MIT"
repository = "https://github.com/your-org/webrtc-video-chat"

[dependencies]
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
tokio-stream = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
aes-gcm = "0.10"
ring = "0.17"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.20"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.11"
serial_test = "3.0"

[[bench]]
name = "performance_benchmarks"
harness = false

[profile.test]
opt-level = 1

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
